Swagger for auth-controller
