# modules/api/controllers/DefaultController.php
@@ -5,14 +5,7 @@ namespace app\modules\api\controllers;
 use yii\web\Controller;
 
 /**
- * @OA\Info(title="My Second API", version="0.1")
- */
- 
-/**
- * @OA\Get(
- *     path="/api/resource.json",
- *     @OA\Response(response="200", description="An example resource")
- * )
+ * @OA\Info(title="Yii2-user-api", version="0.1")
  */
 
 
